apps/argocd/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: users-service-destination-rule
spec:
  host: users
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: fastapi-service-destination-rule
# spec:
#   host: fastapi
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
