apps/argocd/vs-users-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-virtual-service
spec:
  hosts:
    - users
  http:
  - match:
    - headers:
        end-user:
          exact: tester
    fault:
      # delay:
      #   percent: 100
      #   fixedDelay: 2.5s
      abort:
        percent: 50
        grpcStatus: 503
    route:
    - destination:
        host: users
        subset: v2
  - name: default
    route:
    - destination:
        host: users
        subset: v1
