apps/argocd/vs-users.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-virtual-service
spec:
  hosts:
    - users
  http:
  - name: default
    route:
    - destination:
        host: users
        subset: v1
      weight: 20
    - destination:
        host: users
        subset: v2
      weight: 80
