apps/argocd/vs.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: users
# spec:
#   hosts:
#   - users
#   http:
#   - route:
#     - destination:
#         host: users
#         subset: v1
#       weight: 100
#     - destination:
#         host: users
#         subset: v2
#       weight: 0

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users
spec:
  hosts:
  - users
  http:
  - match:
    - headers:
        x-user:
          exact: tester
    route:
    - destination:
        host: users
        subset: v2
  - route:
    - destination:
        host: users
        subset: v1
